# vsloader

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
ansible/: docker-compose.yml  readme.md
ansible/ansible/: hosts  hosts_unconfigured  monitoring.yml  proxmox.yml  setup_ansible.yml  setup_docker.yml
ansible/ansible/roles/boostrap_ansible/: tasks.yml
ansible/ansible/roles/bootstrap_ansible/tasks/: main.yml
ansible/ansible/roles/grafana_install/tasks/: main.yml
ansible/ansible/roles/pve_exporter/tasks/: main.yml
ansible/tools/: ansible.dockerfile
rapport/: IEEE.csl  bibliography.bib  cover.tex  main.md  main.tex  note.md  note.txt
rapport/chapters/: include-abstract.md  include-annexes.md  include-etat-de-lart.md  include-glossaire.md  include-introduction.md  include-research-method.md  include-solution.md  include-table-of-content.md  include-table-of-figures.md
rapport/diagramms/: components.plantuml  components_monitoring.plantuml  rpa.plantuml  sequence_vsloader.plantuml  use_case.plantuml
rapport/figures/: activity-dev.plantuml
recorder/: package.json
recorder/src/: ConfigBuilder.ts  extension.ts
tests/: exemple_test.py
vsbuilder/: README.md  bun.lockb  index.ts  package.json
vsloader/: README.md  bun.lockb  final_test.json  index.ts  package.json
vsloader/src/: Admin.ts  ConfigParser.ts  Student.ts
