[tool.poetry]
name = "vsloader2"
version = "0.1.0"
description = ""
authors = ["Sermeus Steven <etu44050@henallux.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.4.0"
mypy = "^1.9.0"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
